[package]
name = "pabst"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[features]
rxp = ["rivlib"]
sdf-convert = ["sdf"]

[dependencies]
las = { git = "https://github.com/gadomski/las-rs.git" }
rivlib = { git = "https://github.com/gadomski/rivlib-rs.git", optional = true }
sdc = { git = "https://github.com/gadomski/sdc-rs.git" }
sdf = { git = "https://github.com/gadomski/sdf-rs.git", optional = true }
