[package]
name = "pabst"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[features]
rxp-source = ["rivlib"]
sdf-source = ["sdf"]

[dependencies]
las = { git = "https://github.com/gadomski/las-rs.git" }
rivlib = { version="0.1", optional = true }
rustc-serialize = "*"
sdc = "0.1"
sdf = { git = "https://github.com/gadomski/sdf-rs.git", optional = true }
toml = "0.1"
