[package]
name = "pabst"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
description = "Point ABSTraction library"
documentation = "http://gadomski.github.io/pabst"
readme = "README.md"
keywords = ["lidar", "pointcloud"]
license = "MIT"

[features]
rxp-source = ["rivlib"]

[dependencies]
docopt = "0.6"
las = "0.3"
rivlib = { version="0.1", optional = true }
rustc-serialize = "0.3"
sdc = "0.1"
toml = "0.1"
